# arrow-datafusion-ruby

ext/datafusion_ruby/: Cargo.toml
ext/datafusion_ruby/src/: context.rs  dataframe.rs  errors.rs  lib.rs  record_batch.rs
lib/datafusion/: version.rb
