[package]
name = "datafusion_ruby"
version = "0.0.1"
authors = ["Datafusion Contrib Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
datafusion = "46.0.1"
magnus = { git = "https://github.com/matsadler/magnus", tag = "0.4.4" }
object_store = { version = "=0.11.1", features = ["aws", "http"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
url = "2.5.4"
chrono = "0.4"
